--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "cra-template": "1.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript-eslint": "^8.36.0",
+    "web-vitals": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +33,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/css-modules": "^1.0.5",
+    "classnames": "^2.5.1",
+    "prettier": "3.6.2",
+    "typescript": "^4.9.5"
   }
 }
