--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://melissaceleste.github.io",
   "dependencies": {
+    "classnames": "^2.5.1",
     "cra-template": "1.3.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,7 +41,9 @@
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
-    "classnames": "^2.5.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "gh-pages": "^6.3.0",
     "prettier": "3.6.2",
     "typescript": "^4.9.5"
   }
